# cse4310

./: CMakeLists.txt  README.md
cv_annotation/: CMakeLists.txt  cv_annotation.cpp
cv_background/: CMakeLists.txt  cv_background.cpp  cv_pmog.cpp
cv_capture/: CMakeLists.txt  cv_capture.cpp  cv_load_video.cpp
cv_colors/: CMakeLists.txt  cv_equalize.cpp  cv_histogram.cpp  cv_normalize.cpp  cv_threshold.cpp
cv_containers/: CMakeLists.txt  cv_clickable.cpp  cv_containers.cpp
cv_dnn/: CMakeLists.txt  colors.txt  cv_maskrcnn.cpp  cv_yolo.cpp  download_models.sh  yolov3-tiny.cfg
cv_features/: CMakeLists.txt  cv_FLANN_matching.cpp  cv_SIFT.cpp  cv_SURF.cpp  cv_blob.cpp  cv_homography.cpp
cv_hello_world/: CMakeLists.txt  cv_hello_world.cpp
cv_io/: CMakeLists.txt  cv_clickable.cpp  cv_containers.cpp
cv_lines/: CMakeLists.txt  cv_lines.cpp
cv_matching/: CMakeLists.txt  cv_template_matching.cpp
cv_model/: CMakeLists.txt  cv_ellipse.cpp  cv_ransac.cpp
cv_optic_flow/: cv_optic_flow.cpp
cv_template_matching/: CMakeLists.txt  cv_template_matching.cpp
cv_tracking/: CMakeLists.txt  cv_tracking.cpp
demo applications/color_detector/: CMakeLists.txt
demo applications/pupil_tracker/: CMakeLists.txt  PupilTracker.cpp  PupilTracker.h  pupil_demo.cpp
notes/: install opencv_4_5_2.txt  install opencv_4_5_5.txt  install opencv_4_7_0.txt  install pcl_1_11_1.txt  install pcl_1_12_1.txt  install_opencv_3_4_1.txt  update.txt  virtualbox environment setup.txt
pcl_cluster/: CMakeLists.txt  CloudVisualizer.cpp  find_clusters.cpp
pcl_edges/: CMakeLists.txt  find_edges.cpp
pcl_headless/: CMakeLists.txt  load_pcd.cpp  pcl_headless.cpp
pcl_openni2/: CMakeLists.txt  CloudVisualizer.h  openni2_snapper.cpp
pcl_plane/: CMakeLists.txt  find_plane.cpp
pcl_viewer/: CMakeLists.txt  CloudVisualizer.cpp  CloudVisualizer.h  load_pcd.cpp
python/: cv_canny.py  cv_capture.py
scikit-learn/: download_data.sh
